                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-08-2005 fixed: Overlay Render method wouldn't display picture when in GUI
 - 10-08-2005 fixed: video osd could crash if no subtitle had been selected on a movie
 - 10-08-2005 fixed: dvdplayer had long delay on first menu navigation
 - 10-08-2005 added: proper action codes for entering dvdmenu, Keymap - showvideomenu, Skin - XBMC.PlayerControl(showvideomenu)
 - 10-08-2005 updated: Finnish language file (Thnx to jutski)
 - 10-08-2005 updated: Spanish language file (Thnx to chevi)
 - 10-08-2005 updated: Italian language file (Thnx to kotix)
 - 10-08-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 10-08-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 10-08-2005 updated: Polish language file (Thnx to napek)
 - 10-08-2005 updated: Norwegian language file (Thnx to vnm)
 - 10-08-2005 updated: German language file
 - 10-08-2005 fixed: dvdplayer wouldn't detect film (24fps progressive) material correctly, and would enable deinterlacing when not needed
 - 10-08-2005 changed: rewrote parts of the threaded rendering to allow player earlier access to resources after a frame was displayed. Should improve performance.
 - 10-08-2005 changed: removed the ftp user limit from the emergency recovery console.
 - 10-08-2005 fixed: dvdplayer sometimes lost button focus in dvd menu's, resulted in crashes and other bugs
 - 10-08-2005 fixed: cache location in xml affected screenshots & not cachepath
 - 09-08-2005 added: dvdplayer menu animation when a menu button is clicked
 - 09-08-2005 fixed: dvdplayer sync issues when deinterlacing was disabled