@@ -114,6 +114,7 @@ public:
   bool GetAlbumsByPath(const CStdString& strPath, VECALBUMS& albums);
   bool FindAlbumsByName(const CStdString& strSearch, VECALBUMS& albums);
   bool GetTop100(VECSONGS& songs);
+  bool GetTop100Albums(VECALBUMS& albums);
   bool IncrTop100CounterByFileName(const CStdString& strFileName1);
   bool GetSubpathsFromPath(const CStdString &strPath, CStdString& strPathIds);
   bool RemoveSongsFromPaths(const CStdString &strPathIds);
